syntax = "proto3";

package user;

option go_package = "github.com/bricksocoolxd/HLLC-2025/backend/module/user/proto";

import "google/protobuf/timestamp.proto";

// User service definition
service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (Empty);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc UpdatePassword (UpdatePasswordRequest) returns (Empty);
}

// Name message
message Name {
  string first_name = 1;
  string middle_name = 2;
  string last_name = 3;
}

// User message
message User {
  string id = 1;
  Name name = 2;
  repeated string role_ids = 3;
  string username = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// Request messages
message CreateUserRequest {
  string first_name = 1;
  string middle_name = 2;
  string last_name = 3;
  string username = 4;
  string password = 5;
  repeated string role_ids = 6;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string first_name = 2;
  string middle_name = 3;
  string last_name = 4;
  repeated string role_ids = 5;
}

message DeleteUserRequest {
  string id = 1;
}

message ListUsersRequest {
  int64 page = 1;
  int64 limit = 2;
}

message UpdatePasswordRequest {
  string id = 1;
  string old_password = 2;
  string new_password = 3;
}

// Response messages
message UserResponse {
  User user = 1;
}

message ListUsersResponse {
  repeated User users = 1;
  int64 total = 2;
}

message Empty {} 